force-app/main/default/staticresources/vishteststaticrsr/Static Resource/force-app/main/default/objects/Contact/fields/ctx_contact_checkbox__c.field-meta.xml
<CustomField>
    <fullName>ctx_contact_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ctx contact checkbox</label>
    <type>Checkbox</type>
</CustomField>