force-app/main/default/staticresources/vishteststaticrsr/Static Resource/force-app/main/default/objects/Contact/fields/ctx_contact_phone_field__c.field-meta.xml
<CustomField>
    <fullName>ctx_contact_phone_field__c</fullName>
    <label>ctx contact phone field</label>
    <type>Phone</type>
</CustomField>